<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/backgroundcolor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="25px"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/nomDuJeu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="35dp"
                android:padding="20dp"
                android:shadowColor="#DBEBE6E6"
                android:text="TIC TAC TOE"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/blue2"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/onePlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/blue1"
                android:padding="20dp"
                android:text="@string/UNJOUEUR"
                android:textColor="@color/yellowNeon" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/twoPlayers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/blue1"
                android:padding="20dp"
                android:text="@string/DEUXJOUEURS"
                android:textColor="@color/yellowNeon" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/aPropos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/blue1"
                android:padding="20dp"
                android:text="@string/APROPOS"
                android:textColor="@color/yellowNeon" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/fermer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/blue1"
                android:padding="20dp"
                android:text="@string/FERMER"
                android:textColor="@color/yellowNeon" />
        </TableRow>
    </TableLayout>
</LinearLayout>